--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ github_username: icco
 markdown: kramdown
 theme: minima
 gems:
-  - jekyll-feed
+- jekyll-feed
 exclude:
-  - Gemfile
-  - Gemfile.lock
+- Gemfile
+- Gemfile.lock
+permalink: /:title/
