--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-name: "Heather"
-description: "A Hyperminimal Jekyll Theme"
-author: "Jxnblk"
+name: "Nat Welch's Food"
+description: "A recipe book by @icco"
+author: "icco"
 
-# url: "http://localhost:4000"
-url: "http://jxnblk.github.io/Heather"
+url: "https://food.natwelch.com"
 
-exclude: [README.md, Rakefile]
-paginate: 16
+exclude: [README.md, Rakefile, .travis.yml]
+paginate: 10
 permalink: /:title
