--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ author: "icco"
 
 url: "https://food.natwelch.com"
 
-exclude: [README.md, Rakefile, .travis.yml]
+exclude: [README.md, Rakefile, .travis.yml, vendor]
 paginate: 10
 permalink: /:title
