--- a/nginx.conf
+++ b/nginx.conf
@@ -36,7 +36,7 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header NEL '{"report_to":"default","max_age":2592000}';
     add_header Report-To '{"group":"default","max_age":10886400,"endpoints":[{"url":"https://reportd.natwelch.com/report/recipes"}]}';
-    add_header Content-Security-Policy "default-src 'none'; img-src 'self' https://icco.imgix.net https://www.google-analytics.com; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com; style-src 'self' https://unpkg.com; connect-src 'self' https://www.google-analytics.com; frame-ancestors 'none'; base-uri 'none'; form-action 'none'; report-uri https://reportd.natwelch.com/report/recipes; report-to default";
+    add_header Content-Security-Policy "default-src 'none'; img-src 'self' https://icco.imgix.net https://food.natwelch.com; script-src 'self' 'unsafe-inline'; style-src 'self' https://food.natwelch.com; connect-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'none'; report-uri https://reportd.natwelch.com/report/recipes; report-to default";
     add_header Referrer-Policy "no-referrer";
   }
 }
